V0.06:Refatoração do código